Update linting rules

--- a/pipelines/linting_rules.yml
+++ b/pipelines/linting_rules.yml
@@ -10,7 +10,7 @@ line_rules:
         regex: /latest/
         level: "info"
         message: "base image uses 'latest' tag"
-        description: "using the 'latest' tag may cause unpredictable builds. It is recommended that a specific tag is used in the FROM line."
+        description: "using the 'latest' tag may cause unpredictable builds. It is recommended that a specific tag is used in the FROM line"
         reference_url:
           - "https://docs.docker.com/engine/reference/builder/"
           - "#from"
@@ -30,18 +30,26 @@ line_rules:
         inverse_rule: true
         level: "error"
         message: "Base Image must be from the official mcr registry"
-        description: "Base Image must be from the microsoft registry."
+        description: "Base Image must be from the microsoft registry"
         reference_url:
           - "https://github.com/microsoft/containerregistry"
   RUN: 
     paramSyntaxRegex: /.+/
     rules: 
       - 
+        label: "no_restore_when_building"
+        regex: /dotnet build(?!.+--no-restore)/g
+        level: "error"
+        message: "When using dotnet build must use the no-restore flag"
+        description: "When running dotnet build you must use the --no-restore option, to disable implicit restore"
+        reference_url: 
+          - "https://docs.microsoft.com/en-us/dotnet/core/tools/dotnet-build"
+      - 
         label: "no_publish_without_trimming"
         regex: /dotnet publish(?!.+PublishTrimmed=true)/g
         level: "error"
         message: "Application artifact must be trimmed when published"
-        description: "The trim-self-contained deployment model is a specialized version of the self-contained deployment model that is optimized to reduce deployment size."
+        description: "The trim-self-contained deployment model is a specialized version of the self-contained deployment model that is optimized to reduce deployment size"
         reference_url: 
           - "https://docs.microsoft.com/en-us/dotnet/core/deploying/trim-self-contained"
       - 
@@ -49,7 +57,7 @@ line_rules:
         regex: /dotnet publish(?!.+self-contained true)/g
         level: "error"
         message: "The application must be published as a self contained artifact"
-        description: "Publishing your app as self-contained produces a platform-specific executable. The output publishing folder contains all components of the app, including the .NET libraries and target runtime."
+        description: "Publishing your app as self-contained produces a platform-specific executable. The output publishing folder contains all components of the app, including the .NET libraries and target runtime"
         reference_url: 
           - "https://docs.microsoft.com/en-us/dotnet/core/deploying/"
       - 
@@ -57,29 +65,22 @@ line_rules:
         regex: /dotnet publish(?!.+PublishSingleFile=true)/g
         level: "error"
         message: "Application artifact must be published as a single self contained executable"
-        description: "Bundling all application-dependent files into a single binary provides an application developer with the attractive option to deploy and distribute the application as a single file."
+        description: "Bundling all application-dependent files into a single binary provides an application developer with the attractive option to deploy and distribute the application as a single file"
         reference_url: 
           - "https://docs.microsoft.com/en-us/dotnet/core/deploying/single-file"
+  MAINTAINER:
+    paramSyntaxRegex: /.+/
+    rules:
       -
-        label: "dockerfile_must_run_unittests"
-        regex: /dotnet test/
-        inverse_rule: true
-        level: "error"
-        message: "Dockerfile needs to execute the test command. "
-        description: "The dotnet test command is used to execute unit tests in a given solution. You must run the tests before to ascertain that everything works correctly."
+        label: "maintainer_deprecated"
+        regex: /.+/
+        level: "info"
+        message: "the MAINTAINER command is deprecated"
+        description: "MAINTAINER is deprecated in favor of using LABEL since Docker v1.13.0"
         reference_url:
-          - "https://docs.microsoft.com/es-es/dotnet/core/tools/dotnet-test"
-
+          - "https://github.com/docker/cli/blob/master/docs/deprecated.md"
+          - "#maintainer-in-dockerfile"        
 required_instructions: 
-    - 
-      instruction: "MAINTAINER"
-      count: 1
-      level: "error"
-      message: "Maintainer is not defined"
-      description: "The MAINTAINER line is useful for identifying the author in the form of MAINTAINER Joe Smith <joe.smith@example.com>"
-      reference_url: 
-        - "https://docs.docker.com/engine/reference/builder/"
-        - "#maintainer"
     - 
       instruction: "EXPOSE"
       count: 2
@@ -98,4 +99,3 @@ required_instructions:
       reference_url: 
         - "https://docs.docker.com/engine/reference/builder/"
         - "#entrypoint"
-    - 
