--- a/pipelines/azure-pipelines.yml
+++ b/pipelines/azure-pipelines.yml
@@ -1,1 +1,69 @@
-# TODO
+trigger:
+  branches:
+    include:
+    - main
+  paths:
+    exclude:
+    - pipelines/*
+    - test/*
+    - README.md
+    - .dockerignore
+    - .gitignore
+
+variables:
+- name: appName
+  value: 'WebApp'
+- name: tag
+  value: '$(Build.BuildId)' 
+
+
+pool:
+  vmImage: 'ubuntu-latest'
+
+steps:
+- task: Bash@3
+  displayName: Run hadolint linter
+  inputs:
+    targetType: 'inline'
+    script: |
+      docker run --rm -i --env HADOLINT_FAILURE_THRESHOLD=warning hadolint/hadolint:latest < Dockerfile
+    workingDirectory: '$(System.DefaultWorkingDirectory)'
+
+- task: Bash@3
+  displayName: Install semantic linter
+  inputs:
+    targetType: 'inline'
+    script: |
+      npm install -g dockerfile_lint
+
+- task: Bash@3
+  displayName: Run semantic linter
+  inputs:
+    targetType: 'inline'
+    script: |
+      dockerfile_lint -f Dockerfile  -r pipelines/linting_rules.yml
+    workingDirectory: '$(System.DefaultWorkingDirectory)'
+
+- task: Bash@3
+  displayName: Create application image
+  inputs:
+    targetType: 'inline'
+    script: |
+      docker build -t  ${{ lower(variables.appName) }}:$(tag) .
+    workingDirectory: '$(System.DefaultWorkingDirectory)'
+
+- task: Bash@3
+  displayName: Download Trivy Scanner
+  inputs:
+    targetType: 'inline'
+    script: |
+      curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh | sh -s -- -b /usr/local/bin
+
+- task: Bash@3
+  displayName: Run security scanner
+  inputs:
+    targetType: 'inline'
+    script: |
+      trivy image --exit-code 0 --severity LOW,MEDIUM,HIGH --no-progress ${{ lower(variables.appName) }}:$(tag)
+      trivy image --exit-code 1 --severity CRITICAL --no-progress ${{ lower(variables.appName) }}:$(tag)
+      
